<resources >
    <string name="app_name">Baking App</string>
    <string name="title_activity_ingredient_step">Recipe Name</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="error_no_internet">Something terrible happened, Please check your internet connection</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="demo_desc"><![CDATA[2. Whisk the graham cracker crumbs, 50 grams (&#188; cup) of sugar, and &#189; teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed.]]></string>
    <string name="ingredient">Ingredient</string>
    <string name="measure">Measure</string>
...
